--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-1</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <h1>Welcome to Fullstack Course</h1>
@@ -14,9 +15,9 @@
         <h3>Front end:</h3> It is the visible part of website or web application which is responsible for user experience. The user directly interacts with the front end portion of the web application or website.
         <h3>Back end:</h3> It refers to the server-side development of web application or website with a primary focus on how the website works. It is responsible for managing the database through queries and APIs by client-side commands. This type of website mainly consists of three parts front end, back end, and database.
     </p>
-    <h2 style="align-items: center;justify-content: center;">Offline Editor</h2>
+    <h2 class="offline">Offline Editor</h2>
     <img src="./assests//offline.png" alt="">
-    <h2 style="align-items: center;justify-content: center;">Online Editor</h2>
+    <h2 class="online">Online Editor</h2>
     <img src="./assests/online.png" alt="">
 
 </body>
